Added gh action for feature branchees

--- a/.github/workflows/subtree-pull.yml
+++ b/.github/workflows/subtree-pull.yml
@@ -1,9 +1,10 @@
-name: Sync Subtree
+name: Pull Subtree
 
 on:
   push:
     branches:
-      - master
+      - '**'        # matches every branch
+      - '!master'   # excludes master
 
 jobs:
   subtree:
@@ -13,14 +14,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v1
-      - name: git-subtree-push
+      - name: git-subtree-pull
         uses: jmadler/git-subtree-action@1.0
         with:
           github_token: ${{ secrets.GHB_TOKEN }}
           git_name: bvodola
           git_email: bvodola@gmail.com
           repo: https://github.com/bvodola/sbt.git
-          action: push
+          action: pull
           position: master
           prefix: subtree-test
           squash: false
