--- a/.github/workflows/subtree-pull.yml
+++ b/.github/workflows/subtree-pull.yml
@@ -17,7 +17,7 @@ jobs:
       - name: git-subtree-pull
         uses: jmadler/git-subtree-action@1.0
         with:
-          github_token: ${{ secrets.GHB_TOKEN }}
+          # github_token: ${{ secrets.GHB_TOKEN }}
           git_name: bvodola
           git_email: bvodola@gmail.com
           repo: https://github.com/bvodola/sbt.git
